# SocketArchitecture

client/: CMakeLists.txt  main.c
server/: CMakeLists.txt  main.c
